--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -65,12 +65,37 @@ jobs:
     - name: Upload artifacts 3
       uses: actions/upload-artifact@v4
       with:
-        name: StealthIMDB.docker.zst
+        name: StealthIMSession.docker.zst
         path: ./bin/StealthIMSession.docker.zst
   
   run-test:
     runs-on: ubuntu-latest
     needs: release
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: wMTs5aXwfjndimtT
+          MYSQL_DATABASE: test_db
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
+      redis:
+        image: redis:6.0
+        env:
+          REDIS_PASSWORD: wMTs5aXwfjndimtT
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd="redis-cli ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
     - name: Checkout code
@@ -87,14 +112,23 @@ jobs:
         path: bin
 
     - name: Set up Python 3.13.2
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
         python-version: '3.13.2'
 
     - name: Install dependencies
       run: |
         pip install pytest pytest-asyncio
-
+        export PATH="$PATH:~/.local/bin:/opt/hostedtoolcache/Python/3.13.2/x64/bin"
+        sudo pip install grpcio==1.72.0rc1
+        sudo pip install grpcio-tools==1.72.0rc1 # 解决版本问题
+        sudo pip install grpclib
+        sudo pip install mypy_protobuf
+  
+    - name: Install dependencies
+      run: |
+        make debug_proto
+        
     - name: Run Test
       run: |
         cd test
@@ -110,7 +144,7 @@ jobs:
     - name: Download File
       uses: actions/download-artifact@v4
       with:
-        name: StealthIMDB.docker.zst
+        name: StealthIMSession.docker.zst
 
     - name: Unpack File
       run: |
