--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -53,7 +53,7 @@ jobs:
     - name: Upload artifacts 1
       uses: actions/upload-artifact@v4
       with:
-        name: StealthIMDB
+        name: StealthIMSession
         path: ./bin/StealthIMSession
           
     - name: Upload artifacts 2 
