--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -118,7 +118,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install pytest pytest-asyncio
+        sudo pip install pytest pytest-asyncio
         export PATH="$PATH:~/.local/bin:/opt/hostedtoolcache/Python/3.13.2/x64/bin"
         pip install grpcio==1.72.0rc1
         pip install grpcio-tools==1.72.0rc1 # 解决版本问题
